; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config__get_int_force.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config__get_int_force.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GET_NO_ERRORS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config__get_int_force(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = sext i32 %9 to i64
  store i64 %10, i64* %7, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i32, i32* @GET_NO_ERRORS, align 4
  %14 = call i32 @get_entry(%struct.TYPE_4__** %8, i32* %11, i8* %12, i32 0, i32 %13)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %16 = icmp ne %struct.TYPE_4__* %15, null
  br i1 %16, label %17, label %25

17:                                               ; preds = %3
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @git_config_parse_int32(i64* %7, i32 %20)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %17
  %24 = call i32 (...) @git_error_clear()
  br label %25

25:                                               ; preds = %23, %17, %3
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %27 = call i32 @git_config_entry_free(%struct.TYPE_4__* %26)
  %28 = load i64, i64* %7, align 8
  %29 = trunc i64 %28 to i32
  ret i32 %29
}

declare dso_local i32 @get_entry(%struct.TYPE_4__**, i32*, i8*, i32, i32) #1

declare dso_local i64 @git_config_parse_int32(i64*, i32) #1

declare dso_local i32 @git_error_clear(...) #1

declare dso_local i32 @git_config_entry_free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
